Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     awsCredentials: 'Default'
     regionName: 'us-west-2'
     bucketName: 'azdo-test-1'
-    globExpressions: 'root'
+    globExpressions: 'README.md'
     createBucket: true
 
 - script: |
