--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,4 +1,12 @@
 # Starter pipeline
+- task: ECRPushImage@1
+  inputs:
+    awsCredentials: 'Default'
+    regionName: 'us-west-2'
+    imageSource: 'imageid'
+    sourceImageId: 'e04254c4e41a'
+    repositoryName: 'random-target-repo'
+    autoCreateRepository: true
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
